8316594: C2 SuperWord: wrong result with hand unrolled loops