src/hotspot/share/opto/superword.hpp
@@ -722,6 +722,20 @@ class SWPointer : public ArenaObj {
     }
   }
 
+  bool overlap_possible_with_any_in(Node_List* p) {
+    for (uint k = 0; k < p->size(); k++) {
+      MemNode* mem = p->at(k)->as_Mem();
+      SWPointer p_mem(mem, _slp, nullptr, false);
+      // Only if we know that we have Less or Greater can we
+      // be sure that there can never be an overlap between
+      // the two memory regions.
+      if (!not_equal(p_mem)) {
+        return true;
+      }
+    }
+    return false;
+  }
+
   bool not_equal(SWPointer& q)    { return not_equal(cmp(q)); }
   bool equal(SWPointer& q)        { return equal(cmp(q)); }
   bool comparable(SWPointer& q)   { return comparable(cmp(q)); }
